--- a/app.css
+++ b/app.css
@@ -142,7 +142,7 @@ section {
     font-weight: 600;
     letter-spacing: .1rem;
     color: var(--bg-color);
-    z-index: 1;
+/*     z-index: 1; */
     overflow: hidden;
     transition: .5s;
 }
